Tweaked page transition time to stop overlap. Also added on appear transition

--- a/src/global.scss
+++ b/src/global.scss
@@ -9,10 +9,11 @@
     }
   }
   //Transitions. The React Transition Group seems to be one of the tough ones to use as a css module due to the conventions
-  .page-transition-enter {
+  .page-transition-enter ,.page-transition-appear{
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
     position: absolute;
+    transition-delay: 0.4s;
   }
 
   .page-transition-enter.page-transition-enter-active {
@@ -20,13 +21,22 @@
   }
 
   .page-transition-leave {
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
     opacity: 1;
     position: absolute;
   }
 
   .page-transition-leave.page-transition-leave-active {
     opacity: 0;
+  }
+  .page-transition-appear {
+    transition: opacity 0.3s ease-in-out;
+    opacity: 0;
+    position: absolute;
+  }
+
+  .page-transition-appear.page-transition-appear-active {
+    opacity: 1;
   }
 
 }
